--- a/src/pages/Rules.css
+++ b/src/pages/Rules.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: stretch;
+    align-items: center;
     width: 90%;
     border-width: 2px;
     border-color: chocolate;
@@ -31,5 +31,5 @@
 }
 
 .ruleDiscrip {
-    padding-left: 1%;
+    padding-left: 5px;
 }
