Add logout button functionality

--- a/src/components/authNavBar.css
+++ b/src/components/authNavBar.css
@@ -16,10 +16,13 @@
     height: 5vh;
     justify-content: space-around;
     align-items: center;
+    margin-top: 2vh;
 }
 
 .navLink{
     font-size: large;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color:grey;
 }
 
 
