--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -32,6 +32,7 @@
 .rowForm{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: flex-start;
 
     width: 100%;
