--- a/src/pages/challenges/submitButton.css
+++ b/src/pages/challenges/submitButton.css
@@ -1,7 +1,7 @@
-.linkButton {
+.submitButton {
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
 	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-	background-color:#ededed;
+	background-color:lightpink;
 	border-radius:6px;
 	border:1px solid #dcdcdc;
 	display:inline-block;
@@ -12,14 +12,15 @@
 	font-weight:bold;
 	padding:6px 24px;
 	text-decoration:none;
-	text-shadow:0px 1px 0px #ffffff;
+    text-shadow:0px 1px 0px #ffffff;
+	flex: 1;
 }
 
-.linkButton:hover {
+.submitButton:hover {
 	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
 	background-color:#dfdfdf;
 }
-.linkButton:active {
+.submitButton:active {
 	position:relative;
 	top:1px;
 }
