--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -61,7 +61,8 @@
 	padding:6px 24px;
 	text-decoration:none;
     text-shadow:0px 1px 0px #ffffff;
-	flex: 1;
+    flex: 1;
+    margin-bottom: 10px;
 }
 
 .submitButton:hover {
