--- a/src/components/tables/DailyPointsTable.css
+++ b/src/components/tables/DailyPointsTable.css
@@ -6,9 +6,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    color: lightcoral;
+    color:#5a32a8;
 }
 
 .rowItem {
     flex:1;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode';
+    font-size: 12;
+    color:#3267a8;
+    margin-top: 10px;
+
 }
