--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -74,4 +74,31 @@
 	top:1px;
 }
 
+.rowButton {
+    box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	background-color:lightpink;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#777777;
+	font-family:Arial;
+	font-size:12px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+    text-shadow:0px 1px 0px #ffffff;
+    flex: 1;
+    margin-bottom: 10px;
+    color: #3267a8;
+}
 
+.rowButton:hover {
+	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+	background-color:#dfdfdf;
+}
+.rowButton:active {
+	position:relative;
+	top:1px;
+}
