--- a/src/pages/Rules.css
+++ b/src/pages/Rules.css
@@ -9,6 +9,20 @@
     align-items: center;
 }
 
+@media (max-width: 600px) { 
+    .rulePageContainer {
+        height: 120vh;
+        width: 100vw;
+        background-color:  #c1c8e4;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+}
+
 .containerRules {
     display: flex;
     flex-direction: column;
