--- a/src/pages/form.css
+++ b/src/pages/form.css
@@ -1,127 +1,135 @@
 .formContainer {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin: 3%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.formItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: stretch;
+  font-size: x-large;
+  flex-wrap: wrap;
+}
+
+.formTitle {
+}
+
+.formInput {
+  margin-left: 1rem;
+  font-size: large;
+}
+
+.rowForm {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .rowForm {
     flex-direction: column;
-    justify-content: stretch;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    margin: 3%;
-    margin-left: 5%;
-    margin-right: 5%;
+    text-align: center;
+  }
 }
 
-.formItem{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: stretch;
-    font-size: x-large;
-    flex-wrap: wrap;
-
+.rowFormItem {
+  flex: 1;
+  font-size: x-large;
+  text-align: left;
+}
+.rowFormItemCheck {
+  flex: 1;
+  zoom: 3;
+  font-size: x-large;
+  text-align: left;
+  background-color: lawngreen;
 }
 
-.formTitle{
-
-}
-
-.formInput{
-    margin-left: 1rem;
-    font-size: large;
-}
-
-.rowForm{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-
-    width: 100%;
-}
-
-@media (max-width: 600px) { 
-    .rowForm{
-		 flex-direction: column;
-		 text-align: center;
-     }
- }
-
-.rowFormItem{
-    flex:1;
-    font-size: x-large;
-    text-align: left;
-
+.rowFormItemInvitee {
+  flex: 1.5;
+  font-size: small;
+  text-align: center;
 }
 
 .submitButton {
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-	background-color:lightpink;
-	border-radius:6px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:pointer;
-	color:#777777;
-	font-family:Arial;
-	font-size:20px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-    text-shadow:0px 1px 0px #ffffff;
-    flex: 1;
-    margin-bottom: 10px;
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  background-color: lightpink;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #777777;
+  font-family: Arial;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
+  flex: 1;
+  margin-bottom: 10px;
 }
 
 .submitButton:hover {
-	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
-	background-color:#dfdfdf;
+  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+  background-color: #dfdfdf;
 }
 .submitButton:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
 
 .rowButton {
-    box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-	background-color:lightpink;
-	border-radius:6px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:pointer;
-	color:#777777;
-	font-family:Arial;
-	font-size:12px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-    text-shadow:0px 1px 0px #ffffff;
-    flex: 1;
-    margin-bottom: 10px;
-    color: #3267a8; 
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  background-color: lightpink;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #777777;
+  font-family: Arial;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
+  flex: 1;
+  margin-bottom: 10px;
+  color: #3267a8;
 }
 
 .rowButton:hover {
-	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
-	background-color:#dfdfdf;
+  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+  background-color: #dfdfdf;
 }
 .rowButton:active {
-	position:relative;
-	top:1px;
+  position: relative;
+  top: 1px;
 }
 
 /* for challenge page form   */
-.challengeRowForm{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    width: 100%;
+.challengeRowForm {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
 }
-.challengeRowForm2{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    width: 100%;
+.challengeRowForm2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 100%;
 }
-
