--- a/src/components/linkButton.css
+++ b/src/components/linkButton.css
@@ -2,7 +2,7 @@
   box-shadow: inset 0px 1px 0px 0px #ffffff;
   background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   background-color: #ededed;
-  border-radius: 6px;
+  border-radius: 100px;
   border: 1px solid #dcdcdc;
   display: inline-block;
   cursor: pointer;
@@ -13,23 +13,16 @@
   padding: 6px 24px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #ffffff;
+  transition: all 0.2s;
 }
 
 .linkButton:hover {
   background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
-  animation-name: hoverGrow;
-  animation-duration: 1s;
+  transform: translateY(-3px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.653);
 }
 .linkButton:active {
   position: relative;
-  top: 1px;
-}
-
-@keyframes hoverGrow {
-  0% {
-    transform: translate(0);
-  }
-  100% {
-    transform: scale(1.25);
-  }
+  transform: translateY(-1px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.468);
 }
