Change submit button

--- a/src/pages/challenges/submitButton.css
+++ b/src/pages/challenges/submitButton.css
@@ -16,6 +16,7 @@
   flex: 1;
   text-transform: uppercase;
   transition: all 0.2s;
+  position: relative;
 }
 
 .submitButton:hover {
@@ -24,6 +25,7 @@
   transform: translateY(-3px);
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.803);
 }
+
 .submitButton:active {
   position: relative;
   top: 1px;
