--- a/src/components/linkButton.scss
+++ b/src/components/linkButton.scss
@@ -1,6 +1,8 @@
+$button-gradient: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+
 .linkButton {
   box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  background: $button-gradient;
   background-color: #ededed;
   border-radius: 100px;
   border: 1px solid #dcdcdc;
@@ -11,13 +13,14 @@
   font-size: 20px;
   font-weight: bold;
   padding: 6px 24px;
+  margin-top: 3px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #ffffff;
   transition: all 0.2s;
 }
 
 .linkButton:hover {
-  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+  background: $button-gradient;
   transform: translateY(-3px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.653);
 }
