--- a/src/components/tables/DailyPointsTable.css
+++ b/src/components/tables/DailyPointsTable.css
@@ -1,19 +1,18 @@
 .tableContainer {
-    width: 100vw;
+  width: 100vw;
 }
 
-.rowContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    color:#5a32a8;
+.rowContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  color: black;
 }
 
 .rowItem {
-    flex:1;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode';
-    font-size: 12;
-    color:#3267a8;
-    margin-top: 10px;
-
+  flex: 1;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode";
+  font-size: 12;
+  color: black;
+  margin-top: 10px;
 }
