--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -1,3 +1,10 @@
+$button-gradient-color: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+
+@mixin row-form-element() {
+  flex: 1;
+  font-size: x-large;
+  text-align: left;
+}
 .formContainer {
   display: flex;
   flex-direction: column;
@@ -43,27 +50,25 @@
 }
 
 .rowFormItem {
-  flex: 1;
-  font-size: x-large;
-  text-align: left;
+  @include row-form-element();
+  border-width: 1px;
+  border-color: black;
 }
 .rowFormItemCheck {
-  flex: 1;
+  @include row-form-element();
   zoom: 3;
-  font-size: x-large;
-  text-align: left;
   background-color: lawngreen;
 }
 
 .rowFormItemInvitee {
   flex: 1.5;
   font-size: small;
-  text-align: center;
+  text-align: left;
 }
 
 .submitButton {
   box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  background: $button-gradient-color;
   background-color: lightpink;
   border-radius: 6px;
   border: 1px solid #dcdcdc;
@@ -78,20 +83,21 @@
   text-shadow: 0px 1px 0px #ffffff;
   flex: 1;
   margin-bottom: 10px;
-}
 
-.submitButton:hover {
-  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
-  background-color: #dfdfdf;
-}
-.submitButton:active {
-  position: relative;
-  top: 1px;
+  &:hover {
+    background: $button-gradient-color;
+    background-color: #dfdfdf;
+  }
+
+  &:active {
+    position: relative;
+    top: 1px;
+  }
 }
 
 .rowButton {
   box-shadow: inset 0px 1px 0px 0px #ffffff;
-  background: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+  background: $button-gradient-color;
   background-color: lightpink;
   border-radius: 6px;
   border: 1px solid #dcdcdc;
@@ -110,7 +116,7 @@
 }
 
 .rowButton:hover {
-  background: linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+  background: $button-gradient-color;
   background-color: #dfdfdf;
 }
 .rowButton:active {
@@ -120,13 +126,6 @@
 
 /* for challenge page form   */
 .challengeRowForm {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 100%;
-}
-.challengeRowForm2 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
