--- a/src/components/buttons/linkButton.scss
+++ b/src/components/buttons/linkButton.scss
@@ -17,15 +17,15 @@ $button-gradient: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   text-decoration: none;
   text-shadow: 0px 1px 0px #ffffff;
   transition: all 0.2s;
-}
 
-.linkButton:hover {
-  background: $button-gradient;
-  transform: translateY(-3px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.653);
-}
-.linkButton:active {
-  position: relative;
-  transform: translateY(-1px);
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.468);
+  &:hover {
+    background: $button-gradient;
+    transform: translateY(-3px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.653);
+  }
+  &:active {
+    position: relative;
+    transform: translateY(-1px);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.468);
+  }
 }
