--- a/src/pages/form.scss
+++ b/src/pages/form.scss
@@ -5,7 +5,7 @@ $button-gradient-color: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   font-size: x-large;
   text-align: left;
 }
-.formContainer {
+.form {
   display: flex;
   flex-direction: column;
   justify-content: stretch;
@@ -14,56 +14,54 @@ $button-gradient-color: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   margin: 3%;
   margin-left: 5%;
   margin-right: 5%;
-}
 
-.formItem {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: stretch;
-  font-size: x-large;
-  flex-wrap: wrap;
-}
-
-.formTitle {
-}
-
-.formInput {
-  margin-left: 1rem;
-  font-size: large;
-}
-
-.rowForm {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-
-  width: 100%;
-}
-
-@media (max-width: 600px) {
-  .rowForm {
+  &__item {
+    display: flex;
     flex-direction: column;
-    text-align: center;
+    justify-content: space-evenly;
+    align-items: stretch;
+    font-size: x-large;
+    flex-wrap: wrap;
+  }
+
+  &__input {
+    margin-left: 1rem;
+    font-size: large;
+  }
+
+  &__row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    width: 100%;
+
+    &__item {
+      @include row-form-element();
+      border-width: 1px;
+      border-color: black;
+    }
   }
 }
 
-.rowFormItem {
-  @include row-form-element();
-  border-width: 1px;
-  border-color: black;
-}
 .rowFormItemCheck {
   @include row-form-element();
   zoom: 3;
   background-color: lawngreen;
 }
 
-.rowFormItemInvitee {
+.form__row__item--invitee {
   flex: 1.5;
   font-size: small;
   text-align: left;
+}
+
+@media (max-width: 600px) {
+  .form__row {
+    flex-direction: column;
+    text-align: center;
+  }
 }
 
 .submitButton {
@@ -96,9 +94,8 @@ $button-gradient-color: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
 }
 
 .rowButton {
-  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  box-shadow: 1px 1px 1px 1px black;
   background: $button-gradient-color;
-  background-color: lightpink;
   border-radius: 6px;
   border: 1px solid #dcdcdc;
   display: inline-block;
@@ -113,15 +110,18 @@ $button-gradient-color: linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
   flex: 1;
   margin-bottom: 10px;
   color: #3267a8;
-}
+  transition: all 0.2s;
 
-.rowButton:hover {
-  background: $button-gradient-color;
-  background-color: #dfdfdf;
-}
-.rowButton:active {
-  position: relative;
-  top: 1px;
+  &:hover {
+    background: $button-gradient-color;
+    box-shadow: 2px 2px 2px 2px black;
+    transform: scale(1.05);
+  }
+
+  &:active {
+    position: relative;
+    top: 1px;
+  }
 }
 
 /* for challenge page form   */
